[gd_scene load_steps=7 format=3 uid="uid://r8f1j5ohhm1k"]

[ext_resource type="Theme" uid="uid://dcvb71511x1aw" path="res://resources/themes/MainTheme.tres" id="1_ji255"]
[ext_resource type="FontFile" uid="uid://cl2nleoy27fpp" path="res://assets/fonts/GasoekOne-Regular.ttf" id="1_yp2a2"]
[ext_resource type="Script" path="res://screens/modal/Settings.gd" id="2_m1p81"]
[ext_resource type="Texture2D" uid="uid://bs4wthf6dai8a" path="res://assets/images/buttons/button-light.png" id="2_xqhmx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ytkxt"]
texture = ExtResource("2_xqhmx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1cldv"]
texture = ExtResource("2_xqhmx")

[node name="Settings" type="CanvasLayer"]
layer = 5
script = ExtResource("2_m1p81")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ji255")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -651.0
offset_top = 112.0
offset_right = 651.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 36.0
offset_bottom = 143.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.652344, 0.453125, 0.902344, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("1_yp2a2")
theme_override_font_sizes/font_size = 64
text = "TITLE_SETTINGS"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = 171.0
offset_right = -70.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 80
columns = 2

[node name="LanguageLabel" type="Label" parent="Control/Panel/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "SETTING_LANGUAGE"
horizontal_alignment = 2

[node name="LanguageSelect" type="OptionButton" parent="Control/Panel/GridContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_ytkxt")
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "English"
popup/item_1/text = "Español"
popup/item_1/id = 1
popup/item_2/text = "한국인"
popup/item_2/id = 2

[node name="FullscreenLabel" type="Label" parent="Control/Panel/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "SETTING_FULL_SCREEN"
horizontal_alignment = 2

[node name="FullscreenCheck" type="CheckButton" parent="Control/Panel/GridContainer"]
layout_mode = 2

[node name="SettingsOkayBtn" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -246.0
offset_top = -158.0
offset_right = 246.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_1cldv")
text = "BTN_OKAY"

[connection signal="item_selected" from="Control/Panel/GridContainer/LanguageSelect" to="." method="_on_language_select_item_selected"]
[connection signal="toggled" from="Control/Panel/GridContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="Control/Panel/SettingsOkayBtn" to="." method="_on_settings_okay_btn_pressed"]
